WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
134629
[EFL][WK2]Fix build break in EFL WK2
https://bugs.webkit.org/show_bug.cgi?id=134629
Summary
[EFL][WK2]Fix build break in EFL WK2
Rohit
Reported
2014-07-04 04:10:03 PDT
Build log: [ 82%] Building CXX object Source/WebKit2/CMakeFiles/WebKit2.dir/WebProcess/WebPage/VisitedLinkTableController.cpp.o In file included from /home/kumar.rohit/WebKit/Source/WTF/wtf/FastMalloc.h:27:0, from /home/kumar.rohit/WebKit/Source/WebKit2/config.h:55, from /home/kumar.rohit/WebKit/Source/WebKit2/WebProcess/WebPage/DrawingArea.cpp:26: /home/kumar.rohit/WebKit/Source/WTF/wtf/StdLibExtras.h: In instantiation of ‘typename std::_Unique_if<T>::_Single_object std::make_unique(Args&& ...) [with T = WebKit::CoordinatedDrawingArea; Args = {WebKit::WebPage&, const WebKit::WebPageCreationParameters&}; typename std::_Unique_if<T>::_Single_object = std::unique_ptr<WebKit::CoordinatedDrawingArea, std::default_delete<WebKit::CoordinatedDrawingArea> >]’: /home/kumar.rohit/WebKit/Source/WebKit2/WebProcess/WebPage/DrawingArea.cpp:63:76: required from here /home/kumar.rohit/WebKit/Source/WTF/wtf/StdLibExtras.h:362:60: error: cannot allocate an object of abstract type ‘WebKit::CoordinatedDrawingArea’ return unique_ptr<T>(new T(std::forward<Args>(args)...)); ^ In file included from /home/kumar.rohit/WebKit/Source/WebKit2/WebProcess/WebPage/DrawingArea.cpp:38:0: /home/kumar.rohit/WebKit/Source/WebKit2/WebProcess/WebPage/CoordinatedGraphics/CoordinatedDrawingArea.h:39:7: note: because the following virtual functions are pure within ‘WebKit::CoordinatedDrawingArea’: class CoordinatedDrawingArea : public DrawingArea { ^ In file included from /home/kumar.rohit/WebKit/Source/WebKit2/WebProcess/WebPage/DrawingArea.cpp:27:0: /home/kumar.rohit/WebKit/Source/WebKit2/WebProcess/WebPage/DrawingArea.h:104:18: note: virtual void WebKit::DrawingArea::scheduleCompositingLayerFlushImmediately() virtual void scheduleCompositingLayerFlushImmediately() = 0; ^ [ 82%] Building CXX object Source/WebKit2/CMakeFiles/WebKit2.dir/WebProcess/WebPage/WebUndoStep.cpp.o In file included from /home/kumar.rohit/WebKit/Source/WTF/wtf/FastMalloc.h:27:0, from /home/kumar.rohit/WebKit/Source/WebKit2/config.h:55, from /home/kumar.rohit/WebKit/Source/WebKit2/WebProcess/WebPage/DrawingArea.cpp:26: /home/kumar.rohit/WebKit/Source/WTF/wtf/StdLibExtras.h: In function ‘typename std::_Unique_if<T>::_Single_object std::make_unique(Args&& ...) [with T = WebKit::CoordinatedDrawingArea; Args = {WebKit::WebPage&, const WebKit::WebPageCreationParameters&}; typename std::_Unique_if<T>::_Single_object = std::unique_ptr<WebKit::CoordinatedDrawingArea, std::default_delete<WebKit::CoordinatedDrawingArea> >]’: /home/kumar.rohit/WebKit/Source/WTF/wtf/StdLibExtras.h:363:1: error: control reaches end of non-void function [-Werror=return-type] } ^ cc1plus: all warnings being treated as errors
Attachments
Patch
(2.54 KB, patch)
2014-07-04 04:26 PDT
,
Rohit
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Rohit
Comment 1
2014-07-04 04:26:50 PDT
Created
attachment 234401
[details]
Patch
KwangHyuk
Comment 2
2014-07-04 05:50:16 PDT
I need this patch. :) This broke my build for now.
Ryuan Choi
Comment 3
2014-07-04 15:27:55 PDT
Committed
r170814
: <
http://trac.webkit.org/changeset/170814
>
Ryuan Choi
Comment 4
2014-07-04 15:28:40 PDT
Comment on
attachment 234401
[details]
Patch Clear r? after landed without review. It's because this is just for build fix.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug