[EFL][WK2]Fix build break in EFL WK2 https://bugs.webkit.org/show_bug.cgi?id=134629

Unreviewed build fix.

Patch by Rohit Kumar <kumar.rohit@samsung.com> on 2014-07-04

* WebProcess/WebPage/CoordinatedGraphics/CoordinatedDrawingArea.cpp:
(WebKit::CoordinatedDrawingArea::scheduleCompositingLayerFlushImmediately):
* WebProcess/WebPage/CoordinatedGraphics/CoordinatedDrawingArea.h:

Canonical link: https://commits.webkit.org/152618@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@170814 268f45cc-cd09-0410-ab3c-d52691b4dbfc